<resources>
    <string name="app_name">GM Commit Reader</string>
    <string name="refresh">Refresh</string>
    <string name="hash">Hash:</string>
    <string name="author">Author:</string>
    <string name="message">Message:</string>
    <string name="repository">Repository:</string>
    <string name="username">Username:</string>
    <string name="get_commits">Get Commits</string>
    <string name="commit_number">Commit Number:</string>
    <string name="date">Date:</string>
</resources>