<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainRepoSelection">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/inputUsername"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="mellerje" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/inputRepository"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="GmCommitReader" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/getCommitsButton"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:text="@string/get_commits" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>